# sockpit

./: .env.example  .gitignore  DEPLOYMENT.md  LICENSE  README.md  docker-compose.prod.yml  guide.md  history.md  install.sh
.github/workflows/: build-agent.yml
agent/: Cargo.toml  Dockerfile  build.rs  sockpit-agent.exe.manifest  sockpit-agent.rc  test-config.json
agent/src/: config.rs  crypto.rs  main.rs  websocket.rs
agent/src/socks5/: auth.rs  limiter.rs  mod.rs  relay.rs  server.rs
dashboard/: Dockerfile  package-lock.json  package.json
dashboard/src/app/: globals.css  layout.js  page.js
dashboard/src/hooks/: useAuth.js  useWebSocket.js
dashboard/src/lib/: api.js  auth.js
docs/: agent-docker.md  agent-linux.md  agent-windows.md  api-reference.md  architecture.md  authentication.md  backend-api.md  database-schema.md  deployment.md  frontend.md  github-actions.md  installer-generator.md  security.md  socks5-engine.md  user-flows.md  websocket-protocol.md
server/: .env  Dockerfile  package-lock.json  package.json
server/migrations/: 1784401666091_create-dashboard-users.js  1784401666662_create-install-tokens.js  1784401667201_create-servers.js  1784401667758_create-socks5-users.js  1784401668310_create-connection-logs.js  1784401668859_create-server-metrics.js  1784401669452_create-audit-logs.js
server/src/: app.js  index.js
server/src/config/: database.js  env.js  redis.js
server/src/middleware/: auth.middleware.js  ownership.middleware.js  rbac.middleware.js  validate.middleware.js
server/src/models/: metric.model.js  server.model.js  (+2 more)
(+31 files in other folders)
